# memwaste

./: CMakeCache.txt  CMakeLists.txt  CMake_Test  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  README.md  cmake_install.cmake  test.cpp
memwaste/: CMakeLists.txt  Makefile  cmake_install.cmake  memwaste.cpp  memwaste.h
